DON-99 - fix Safari stretching the header logo

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -48,10 +48,6 @@ mat-sidenav {
   justify-content:center;
 }
 
-.logo__link {
-  display:flex;
-}
-
 .material-icons {
   font-size: 21px;
 }
